@@ -5,23 +5,24 @@
 
     <groupId>com.paypal.selion</groupId>
     <artifactId>SeLion-Parent</artifactId>
-    <version>1.2.0</version>
+    <version>2.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>SeLion Parent POM</name>
     <description>The SeLion Parent POM</description>
     <url>http://selion.io</url>
 
     <properties>
-        <compileSource>1.7</compileSource>
+        <compileSource>1.8</compileSource>
         <skipTests>false</skipTests>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <selenium.version>2.53.1</selenium.version>
+        <selenium.version>3.7.1</selenium.version>
         <iosdriver.version>0.6.5</iosdriver.version>
         <selendroid.version>0.17.0</selendroid.version>
-        <appium.version>4.1.2</appium.version>
+        <appium.version>5.0.0-BETA6</appium.version>
         <testng.version>6.9.10</testng.version>
         <snakeyaml.version>1.15</snakeyaml.version>
-        <htmlunit.version>2.20</htmlunit.version>
+        <htmlunit.version>2.27</htmlunit.version>
+        <htmlunitdriver.version>2.27</htmlunitdriver.version>
         <project.bom.version>${project.version}</project.bom.version>
     </properties>
 
@@ -31,7 +32,11 @@
         <module>dataproviders</module>
         <module>server</module>
         <module>client</module>
+        <module>appium-provider</module>
+        <module>iosdriver-provider</module>
+        <module>selendroid-provider</module>
         <module>codegen</module>
+        <module>codegen-maven</module>
         <module>archetype</module>
     </modules>
 
@@ -160,10 +165,17 @@
     <build>
         <pluginManagement>
             <plugins>
+                <!-- required to force maven to use a lambda (java 8) compatible version of this artifact -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-plugin-plugin</artifactId>
+                    <version>3.5</version>
+                </plugin>
+
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.1</version>
+                    <version>3.6.1</version>
                     <configuration>
                         <source>${compileSource}</source>
                         <target>${compileSource}</target>
@@ -177,7 +189,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-source-plugin</artifactId>
-                    <version>2.2.1</version>
+                    <version>3.0.1</version>
                     <executions>
                         <execution>
                             <phase>package</phase>
@@ -191,14 +203,14 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>2.10.3</version>
+                    <version>2.10.4</version>
                     <configuration>
                         <minmemory>128m</minmemory>
                         <maxmemory>512</maxmemory>
                         <source>${compileSource}</source>
                         <overview>${basedir}/src/main/resources/overview.html</overview>
                         <links>
-                            <link>http://docs.oracle.com/javase/7/docs/api/</link>
+                            <link>http://docs.oracle.com/javase/8/docs/api/</link>
                         </links>
                         <additionalparam>${javadoc.opts}</additionalparam>
                     </configuration>
@@ -215,12 +227,11 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.19.1</version>
+                    <version>2.20</version>
                     <configuration>
                         <includes>
                             <include>**/*Test*.java</include>
                         </includes>
-                        <argLine>-XX:MaxPermSize=128m -XX:-UseSplitVerifier</argLine>
                     </configuration>
                 </plugin>
 
@@ -233,7 +244,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-enforcer-plugin</artifactId>
-                    <version>1.4</version>
+                    <version>1.4.1</version>
                     <executions>
                         <execution>
                             <id>enforce-versions</id>
@@ -243,10 +254,10 @@
                             <configuration>
                                 <rules>
                                     <requireMavenVersion>
-                                        <version>[3.0,)</version>
+                                        <version>[3.2,)</version>
                                     </requireMavenVersion>
                                     <requireJavaVersion>
-                                        <version>1.7</version>
+                                        <version>1.8</version>
                                     </requireJavaVersion>
                                     <requireReleaseDeps>
                                         <onlyWhenRelease>true</onlyWhenRelease>
